@@ -13,3 +13,4 @@ Michael Janssen <jamuraa@debian.org>
 David Austin <david@forde.anu.edu.au>
 Koos van den Hout <koos@kzdoos.xs4all.nl>
 Arthur van Leeuwen
+Robert van der Meulen <rvdm@wiretrip.org>
