@@ -245,6 +245,10 @@ to the \fBOutputFile\fP. After transmission, the ftp-connection will be ended.
 This may also result in phone charges, for which Author takes no responsibility.
 See License.
 .TP
+\fBPassive\fP \fIOn\fP|\fIOff\fP
+If set to \fIOn\fP, passive ftp will be used. This can help connecting to
+ftp servers from the inside of a NAT-ed network.
+.TP
 \fBTryHarder\fP \fIOn\fP|\fIOff\fP
 Not implemented, yet.
 .SH BUGS
